SPA-1363.Kiosk mode, layout issue with the "Who are you?" page

--- a/src/app/create-hallpass-forms/main-hallpass--form/main-hall-pass-form.component.scss
+++ b/src/app/create-hallpass-forms/main-hallpass--form/main-hall-pass-form.component.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 335px) {
   div.fixed-card-wrapper {
     width: 300px !important;
   }
