--- a/src/app/create-hallpass-forms/main-hallpass--form/student-groups/who-you-are/who-you-are.component.scss
+++ b/src/app/create-hallpass-forms/main-hallpass--form/student-groups/who-you-are/who-you-are.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @media all and (min-width: 320px) {
+  @media all and (max-width: 335px) {
     div.wya-container {
       width: 100%;
       max-width: 300px;
